--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -260,6 +260,9 @@
     }
   },
   "dashboard-settings": {
+    "annotations": {
+      "title": ""
+    },
     "dashboard-delete-button": "",
     "general": {
       "auto-refresh-description": "",
@@ -272,11 +275,22 @@
       "panel-options-graph-tooltip-label": "",
       "panel-options-label": "",
       "tags-label": "",
+      "title": "",
       "title-label": ""
     },
     "json-editor": {
       "save-button": "",
-      "subtitle": ""
+      "subtitle": "",
+      "title": ""
+    },
+    "links": {
+      "title": ""
+    },
+    "permissions": {
+      "title": ""
+    },
+    "settings": {
+      "title": ""
     },
     "time-picker": {
       "hide-time-picker": "",
@@ -287,6 +301,12 @@
       "time-options-label": "",
       "time-zone-label": "",
       "week-start-label": ""
+    },
+    "variables": {
+      "title": ""
+    },
+    "versions": {
+      "title": ""
     }
   },
   "data-source-picker": {
