--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -260,6 +260,9 @@
     }
   },
   "dashboard-settings": {
+    "annotations": {
+      "title": "Annotations"
+    },
     "dashboard-delete-button": "Delete Dashboard",
     "general": {
       "auto-refresh-description": "Define the auto refresh intervals that should be available in the auto refresh list.",
@@ -272,11 +275,22 @@
       "panel-options-graph-tooltip-label": "Graph tooltip",
       "panel-options-label": "Panel options",
       "tags-label": "Tags",
+      "title": "General",
       "title-label": "Title"
     },
     "json-editor": {
       "save-button": "Save changes",
-      "subtitle": "The JSON model below is the data structure that defines the dashboard. This includes dashboard settings, panel settings, layout, queries, and so on."
+      "subtitle": "The JSON model below is the data structure that defines the dashboard. This includes dashboard settings, panel settings, layout, queries, and so on.",
+      "title": "JSON Model"
+    },
+    "links": {
+      "title": "Links"
+    },
+    "permissions": {
+      "title": "Permissions"
+    },
+    "settings": {
+      "title": "Settings"
     },
     "time-picker": {
       "hide-time-picker": "Hide time picker",
@@ -287,6 +301,12 @@
       "time-options-label": "Time options",
       "time-zone-label": "Time zone",
       "week-start-label": "Week start"
+    },
+    "variables": {
+      "title": "Variables"
+    },
+    "versions": {
+      "title": "Versions"
     }
   },
   "data-source-picker": {
