--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -222,12 +222,14 @@
       "description-grafana": "Đįşčővęř vįşūäľįžäŧįőŉş ūşįŉģ mőčĸ đäŧä",
       "description-mixed": "Ůşę mūľŧįpľę đäŧä şőūřčęş"
     },
-    "configure-new-data-source": "Øpęŉ ä ŉęŵ ŧäþ äŉđ čőŉƒįģūřę ä đäŧä şőūřčę",
-    "input-placeholder": "Ŝęľęčŧ đäŧä şőūřčę",
     "list": {
       "no-data-source-message": "Ńő đäŧä şőūřčęş ƒőūŉđ"
     },
-    "modal-title": "Ŝęľęčŧ đäŧä şőūřčę",
+    "modal": {
+      "configure-new-data-source": "Øpęŉ ä ŉęŵ ŧäþ äŉđ čőŉƒįģūřę ä đäŧä şőūřčę",
+      "input-placeholder": "Ŝęľęčŧ đäŧä şőūřčę",
+      "title": "Ŝęľęčŧ đäŧä şőūřčę"
+    },
     "open-advanced-button": "Øpęŉ äđväŉčęđ đäŧä şőūřčę pįčĸęř"
   },
   "data-sources": {
