--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -217,6 +217,97 @@
       "label": "Åđđ ŉęŵ đäŧä şőūřčę"
     }
   },
+  "explore": {
+    "history": {
+      "rich-history": {
+        "close-tooltip": "Cľőşę qūęřy ĥįşŧőřy",
+        "datasource-a-z": "Đäŧä şőūřčę Å-Ż",
+        "datasource-z-a": "Đäŧä şőūřčę Ż-Å",
+        "newest-first": "Ńęŵęşŧ ƒįřşŧ",
+        "oldest-first": "Øľđęşŧ ƒįřşŧ",
+        "query-history": "Qūęřy ĥįşŧőřy",
+        "settings": "Ŝęŧŧįŉģş",
+        "starred": "Ŝŧäřřęđ"
+      },
+      "rich-history-card": {
+        "add-comment-form": "Åđđ čőmmęŉŧ ƒőřm",
+        "add-comment-tooltip": "Åđđ čőmmęŉŧ",
+        "cancel": "Cäŉčęľ",
+        "copy-query-tooltip": "Cőpy qūęřy ŧő čľįpþőäřđ",
+        "copy-shortened-link-tooltip": "Cőpy şĥőřŧęŉęđ ľįŉĸ ŧő čľįpþőäřđ",
+        "datasource-icon-label": "Đäŧä şőūřčę įčőŉ",
+        "datasource-name-label": "Đäŧä şőūřčę ŉämę",
+        "datasource-not-exist": "Đäŧä şőūřčę đőęş ŉőŧ ęχįşŧ äŉymőřę",
+        "delete-query-confirmation-title": "Đęľęŧę",
+        "delete-query-title": "Đęľęŧę qūęřy",
+        "delete-query-tooltip": "Đęľęŧę qūęřy",
+        "delete-starred-query-confirmation-text": "Åřę yőū şūřę yőū ŵäŉŧ ŧő pęřmäŉęŉŧľy đęľęŧę yőūř şŧäřřęđ qūęřy?",
+        "delete-yes-text": "Đęľęŧę",
+        "edit-comment-tooltip": "Ēđįŧ čőmmęŉŧ",
+        "enter-key": "Ēŉŧęř",
+        "escape-key": "Ēşčäpę",
+        "loading-text": "ľőäđįŉģ...",
+        "optional-description": "Åŉ őpŧįőŉäľ đęşčřįpŧįőŉ őƒ ŵĥäŧ ŧĥę qūęřy đőęş.",
+        "query-comment-label": "Qūęřy čőmmęŉŧ",
+        "query-copied": "Qūęřy čőpįęđ ŧő čľįpþőäřđ",
+        "query-deleted": "Qūęřy đęľęŧęđ",
+        "query-text-label": "Qūęřy ŧęχŧ",
+        "run-query-button": "Ŗūŉ qūęřy",
+        "save-comment": "Ŝävę čőmmęŉŧ",
+        "star-query-tooltip": "Ŝŧäř qūęřy",
+        "switch-datasource-button": "Ŝŵįŧčĥ đäŧä şőūřčę äŉđ řūŉ qūęřy",
+        "unstar-query-tooltip": "Ůŉşŧäř qūęřy",
+        "update-comment-form": "Ůpđäŧę čőmmęŉŧ ƒőřm"
+      },
+      "rich-history-container": {
+        "loading": "Ŀőäđįŉģ..."
+      },
+      "rich-history-queries-tab": {
+        "displaying-queries": "Đįşpľäyįŉģ {{ count }} qūęřįęş",
+        "filter-aria-label": "Fįľŧęř qūęřįęş ƒőř đäŧä şőūřčęş(ş)",
+        "filter-history": "Fįľŧęř ĥįşŧőřy",
+        "filter-placeholder": "Fįľŧęř qūęřįęş ƒőř đäŧä şőūřčęş(ş)",
+        "history-local": "Ŧĥę ĥįşŧőřy įş ľőčäľ ŧő yőūř þřőŵşęř äŉđ įş ŉőŧ şĥäřęđ ŵįŧĥ őŧĥęřş.",
+        "loading": "Ŀőäđįŉģ...",
+        "loading-results": "Ŀőäđįŉģ řęşūľŧş...",
+        "search-placeholder": "Ŝęäřčĥ qūęřįęş",
+        "showing-queries": "Ŝĥőŵįŉģ {{ shown }} őƒ {{ total }} <0>Ŀőäđ mőřę</0>",
+        "sort-aria-label": "Ŝőřŧ qūęřįęş",
+        "sort-placeholder": "Ŝőřŧ qūęřįęş þy"
+      },
+      "rich-history-settings-tab": {
+        "alert-info": "Ğřäƒäŉä ŵįľľ ĸęęp ęŉŧřįęş ūp ŧő {şęľęčŧęđØpŧįőŉ?.ľäþęľ}.",
+        "change-default-tab": "Cĥäŉģę ŧĥę đęƒäūľŧ äčŧįvę ŧäþ ƒřőm “Qūęřy ĥįşŧőřy” ŧő “Ŝŧäřřęđ”",
+        "clear-history-info": "Đęľęŧę äľľ őƒ yőūř qūęřy ĥįşŧőřy, pęřmäŉęŉŧľy.",
+        "clear-query-history": "Cľęäř qūęřy ĥįşŧőřy",
+        "clear-query-history-button": "Cľęäř qūęřy ĥįşŧőřy",
+        "delete-confirm-text": "Åřę yőū şūřę yőū ŵäŉŧ ŧő pęřmäŉęŉŧľy đęľęŧę yőūř qūęřy ĥįşŧőřy?",
+        "delete-title": "Đęľęŧę",
+        "delete-yes-text": "Đęľęŧę",
+        "history-time-span": "Ħįşŧőřy ŧįmę şpäŉ",
+        "history-time-span-description": "",
+        "only-show-active-datasource": "Øŉľy şĥőŵ qūęřįęş ƒőř đäŧä şőūřčę čūřřęŉŧľy äčŧįvę įŉ Ēχpľőřę",
+        "query-history-deleted": "Qūęřy ĥįşŧőřy đęľęŧęđ",
+        "retention-period": {
+          "1-week": "1 ŵęęĸ",
+          "2-days": "2 đäyş",
+          "2-weeks": "2 ŵęęĸş",
+          "5-days": "5 đäyş"
+        }
+      },
+      "rich-history-starred-tab": {
+        "filter-queries-aria-label": "Fįľŧęř qūęřįęş ƒőř đäŧä şőūřčęş(ş)",
+        "filter-queries-placeholder": "Fįľŧęř qūęřįęş ƒőř đäŧä şőūřčęş(ş)",
+        "loading": "Ŀőäđįŉģ...",
+        "loading-results": "Ŀőäđįŉģ řęşūľŧş...",
+        "local-history-message": "Ŧĥę ĥįşŧőřy įş ľőčäľ ŧő yőūř þřőŵşęř äŉđ įş ŉőŧ şĥäřęđ ŵįŧĥ őŧĥęřş.",
+        "search-queries-placeholder": "Ŝęäřčĥ qūęřįęş",
+        "showing-queries": "Ŝĥőŵįŉģ {qūęřįęş.ľęŉģŧĥ} őƒ {ŧőŧäľQūęřįęş} <5>Ŀőäđ mőřę</5>",
+        "sort-queries-aria-label": "Ŝőřŧ qūęřįęş",
+        "sort-queries-placeholder": "Ŝőřŧ qūęřįęş þy"
+      }
+    }
+  },
   "folder-picker": {
     "loading": "Ŀőäđįŉģ ƒőľđęřş..."
   },
