BrowseDashboards: Improve screen reader announcements (#75970)
* use aria-labelledby to describe the whole row

* change

* fix typo

* i18n

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -55,7 +55,11 @@
       "total__other": ""
     },
     "dashboards-tree": {
+      "collapse-folder-button": "",
+      "expand-folder-button": "",
       "name-column": "",
+      "select-all-header-checkbox": "",
+      "select-checkbox": "",
       "tags-column": ""
     },
     "folder-actions-button": {
