fix nav.infrastructure.title translation

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -573,7 +573,7 @@
       "title": "Incidents"
     },
     "infrastructure": {
-      "title": "Infrastructure"
+      "title": "Integrations"
     },
     "kubernetes": {
       "title": "Kubernetes"
