--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -573,7 +573,7 @@
       "title": "Ĩŉčįđęŉŧş"
     },
     "infrastructure": {
-      "title": "Ĩŉƒřäşŧřūčŧūřę"
+      "title": "Ĩŉŧęģřäŧįőŉş"
     },
     "kubernetes": {
       "title": "Ķūþęřŉęŧęş"
