--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -363,6 +363,18 @@
       "placeholder": ""
     }
   },
+  "graph": {
+    "container": {
+      "content": "",
+      "show-all-series__one": "",
+      "show-all-series__many": "",
+      "show-all-series__other": "",
+      "show-only-series__one": "",
+      "show-only-series__many": "",
+      "show-only-series__other": "",
+      "title": ""
+    }
+  },
   "help-modal": {
     "shortcuts-category": {
       "dashboard": "",
