--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -136,6 +136,16 @@
       "error-message": "Åŉ ūŉĸŉőŵŉ ęřřőř őččūřřęđ ŵĥįľę ƒęŧčĥįŉģ čőřřęľäŧįőŉ đäŧä. Pľęäşę ŧřy äģäįŉ.",
       "title": "Ēřřőř ƒęŧčĥįŉģ čőřřęľäŧįőŉ đäŧä"
     },
+    "basic-info-form": {
+      "description-description": "Øpŧįőŉäľ đęşčřįpŧįőŉ ŵįŧĥ mőřę įŉƒőřmäŧįőŉ äþőūŧ ŧĥę ľįŉĸ",
+      "description-label": "Đęşčřįpŧįőŉ",
+      "label-description": "Ŧĥįş ŉämę ŵįľľ þę ūşęđ äş ŧĥę ľäþęľ ƒőř ŧĥę čőřřęľäŧįőŉ. Ŧĥįş ŵįľľ şĥőŵ äş þūŧŧőŉ ŧęχŧ, ä męŉū įŧęm, őř ĥővęř ŧęχŧ őŉ ä ľįŉĸ.",
+      "label-label": "Ŀäþęľ",
+      "label-placeholder": "ę.ģ. Ŧęmpő ŧřäčęş",
+      "label-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "sub-text": "<0>Đęƒįŉę ŧęχŧ ŧĥäŧ ŵįľľ đęşčřįþę ŧĥę čőřřęľäŧįőŉ.</0>",
+      "title": "Đęƒįŉę čőřřęľäŧįőŉ ľäþęľ (Ŝŧęp 1 őƒ 3)"
+    },
     "list": {
       "delete": "đęľęŧę čőřřęľäŧįőŉ",
       "label": "Ŀäþęľ",
@@ -144,36 +154,23 @@
       "source": "Ŝőūřčę",
       "target": "Ŧäřģęŧ"
     },
+    "navigation-form": {
+      "add-button": "Åđđ",
+      "back-button": "ßäčĸ",
+      "next-button": "Ńęχŧ",
+      "save-button": "Ŝävę"
+    },
     "page-content": "Ŧő ęŉäþľę Cőřřęľäŧįőŉş, äđđ įŧ įŉ ŧĥę Ğřäƒäŉä čőŉƒįģ:",
     "page-heading": "Cőřřęľäŧįőŉş äřę đįşäþľęđ",
-    "sub-title": "Đęƒįŉę ĥőŵ đäŧä ľįvįŉģ įŉ đįƒƒęřęŉŧ đäŧä şőūřčęş řęľäŧęş ŧő ęäčĥ őŧĥęř. Ŗęäđ mőřę įŉ ŧĥę <2>đőčūmęŉŧäŧįőŉ<1></1></2>"
-  },
-  "correlations": {
-    "basic-info-form": {
-      "description-description": "Øpŧįőŉäľ đęşčřįpŧįőŉ ŵįŧĥ mőřę įŉƒőřmäŧįőŉ äþőūŧ ŧĥę ľįŉĸ",
-      "Description-label": "Đęşčřįpŧįőŉ",
-      "label-description": "Ŧĥįş ŉämę ŵįľľ þę ūşęđ äş ŧĥę ľäþęľ ƒőř ŧĥę čőřřęľäŧįőŉ. Ŧĥįş ŵįľľ şĥőŵ äş þūŧŧőŉ ŧęχŧ, ä męŉū įŧęm, őř ĥővęř ŧęχŧ őŉ ä ľįŉĸ.",
-      "label-label": "Ŀäþęľ",
-      "label-placeholder": "ę.ģ. Ŧęmpő ŧřäčęş",
-      "label-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
-      "sub-text": "<0>Đęƒįŉę ŧęχŧ ŧĥäŧ ŵįľľ đęşčřįþę ŧĥę čőřřęľäŧįőŉ.</0>",
-      "title": "Đęƒįŉę čőřřęľäŧįőŉ ľäþęľ (Ŝŧęp 1 őƒ 3)"
-    },
-    "nav-form": {
-      "add-btn": "Åđđ",
-      "back-btn": "ßäčĸ",
-      "next-btn": "Ńęχŧ",
-      "save-btn": "Ŝävę"
-    },
     "query-editor": {
       "control-rules": "Ŧĥę şęľęčŧęđ ŧäřģęŧ đäŧä şőūřčę mūşŧ ęχpőřŧ ä qūęřy ęđįŧőř.",
-      "ds-text": "Pľęäşę şęľęčŧ ä ŧäřģęŧ đäŧä şőūřčę ƒįřşŧ.",
-      "ds-title": "Ńő đäŧä şőūřčę şęľęčŧęđ",
+      "data-source-text": "Pľęäşę şęľęčŧ ä ŧäřģęŧ đäŧä şőūřčę ƒįřşŧ.",
+      "data-source-title": "Ńő đäŧä şőūřčę şęľęčŧęđ",
       "error-text": "Ŧĥę şęľęčŧęđ đäŧä şőūřčę čőūľđ ŉőŧ þę ľőäđęđ.",
       "error-title": "Ēřřőř ľőäđįŉģ đäŧä şőūřčę",
       "loading": "Ŀőäđįŉģ qūęřy ęđįŧőř...",
-      "qe-title": "Đäŧä şőūřčę đőęş ŉőŧ ęχpőřŧ ä qūęřy ęđįŧőř.",
       "query-description": "Đęƒįŉę ŧĥę qūęřy ŧĥäŧ įş řūŉ ŵĥęŉ ŧĥę ľįŉĸ įş čľįčĸęđ. Ÿőū čäŉ ūşę <2>väřįäþľęş</2> ŧő äččęşş şpęčįƒįč ƒįęľđ väľūęş.",
+      "query-editor-title": "Đäŧä şőūřčę đőęş ŉőŧ ęχpőřŧ ä qūęřy ęđįŧőř.",
       "query-label": "Qūęřy"
     },
     "source-form": {
@@ -188,6 +185,7 @@
       "sub-text": "<0>Đęƒįŉę ŵĥäŧ đäŧä şőūřčę ŵįľľ đįşpľäy ŧĥę čőřřęľäŧįőŉ, äŉđ ŵĥäŧ đäŧä ŵįľľ řępľäčę přęvįőūşľy đęƒįŉęđ väřįäþľęş.</0>",
       "title": "Cőŉƒįģūřę ŧĥę đäŧä şőūřčę ŧĥäŧ ŵįľľ ľįŉĸ ŧő {{dataSourceName}} (Ŝŧęp 3 őƒ 3)"
     },
+    "sub-title": "Đęƒįŉę ĥőŵ đäŧä ľįvįŉģ įŉ đįƒƒęřęŉŧ đäŧä şőūřčęş řęľäŧęş ŧő ęäčĥ őŧĥęř. Ŗęäđ mőřę įŉ ŧĥę <2>đőčūmęŉŧäŧįőŉ<1></1></2>",
     "target-form": {
       "control-rules": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
       "sub-text": "<0>Đęƒįŉę ŵĥäŧ đäŧä şőūřčę ŧĥę čőřřęľäŧįőŉ ŵįľľ ľįŉĸ ŧő, äŉđ ŵĥäŧ qūęřy ŵįľľ řūŉ ŵĥęŉ ŧĥę čőřřęľäŧįőŉ įş čľįčĸęđ.</0>",
