Markup `DataSourcePicker` for translations (components used in Explore only) (#75400)
* feat: added markup for data source picker title

* feat: added markup for builtin data source list

* feat: added markup for datasource list

* chore: generated markup files

* feat: added markup for new data source button

* chore: generated markup files

* fix: fixed prefix names

* chore: updated markup files

* fix: removed extra spaces

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -314,6 +314,20 @@
     }
   },
   "data-source-picker": {
+    "add-new-data-source": "",
+    "built-in-list": {
+      "description-dashboard": "",
+      "description-grafana": "",
+      "description-mixed": ""
+    },
+    "list": {
+      "no-data-source-message": ""
+    },
+    "modal": {
+      "configure-new-data-source": "",
+      "input-placeholder": "",
+      "title": ""
+    },
     "open-advanced-button": ""
   },
   "data-sources": {
