--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -419,6 +419,15 @@
     },
     "title": ""
   },
+  "inspector": {
+    "query": {
+      "collapse-all": "",
+      "copy-to-clipboard": "",
+      "expand-all": "",
+      "no-data": "",
+      "refresh": ""
+    }
+  },
   "library-panel": {
     "add-modal": {
       "cancel": "Cancelar",
@@ -821,6 +830,9 @@
       "old-password-required": "",
       "passwords-must-match": ""
     }
+  },
+  "query-inspector": {
+    "description": ""
   },
   "refresh-picker": {
     "aria-label": {
