--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -409,6 +409,15 @@
     },
     "title": ""
   },
+  "inspector": {
+    "query": {
+      "collapse-all": "",
+      "copy-to-clipboard": "",
+      "expand-all": "",
+      "no-data": "",
+      "refresh": ""
+    }
+  },
   "library-panel": {
     "add-modal": {
       "cancel": "取消",
@@ -809,6 +818,9 @@
       "old-password-required": "",
       "passwords-must-match": ""
     }
+  },
+  "query-inspector": {
+    "description": ""
   },
   "refresh-picker": {
     "aria-label": {
