--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -414,6 +414,15 @@
     },
     "title": "Shortcuts"
   },
+  "inspector": {
+    "query": {
+      "collapse-all": "Collapse all",
+      "copy-to-clipboard": "Copy to clipboard",
+      "expand-all": "Expand all",
+      "no-data": "No request and response collected yet. Hit refresh button",
+      "refresh": "Refresh"
+    }
+  },
   "library-panel": {
     "add-modal": {
       "cancel": "Cancel",
@@ -815,6 +824,9 @@
       "old-password-required": "Old password is required",
       "passwords-must-match": "Passwords must match"
     }
+  },
+  "query-inspector": {
+    "description": "Query inspector allows you to view raw request and response. To collect this data Grafana needs to issue a new query. Click refresh button below to trigger a new query."
   },
   "refresh-picker": {
     "aria-label": {
