Saved queries: Expose component for plugins (#116622)
* Saved queries: Expose component for plugins

* Translations

* Add analytics

* Rename extension and add docs

* Unit test

* Prettier

* Update translation

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12583,6 +12583,11 @@
       "title-data-source-help": "Data source help"
     }
   },
+  "query-library": {
+    "exposed-compoment": {
+      "tooltip": "Open Query Library"
+    }
+  },
   "query-operation": {
     "header": {
       "app-dashboard": "Dashboard",
