fix: Make RefreshPicker WCAG 2.5.3 compliant
- Update auto aria-labels to match WCAG 2.5.3 compliant
- Remove verbose descriptions from aria-labels, keeping them in tooltips.

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12692,10 +12692,10 @@
   "refresh-picker": {
     "aria-label": {
       "choose-interval": "Auto refresh turned off. Choose refresh time interval",
-      "duration-selected": "Choose refresh time interval with current interval {{durationAriaLabel}} selected"
+      "duration-selected": "{{durationAriaLabel}} - interval selected"
     },
     "auto-option": {
-      "aria-label": "",
+      "aria-label": "Auto",
       "label": ""
     },
     "live-option": {
