--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -14965,6 +14965,9 @@
       "label-both": "Both",
       "label-lines": "Lines",
       "label-points": "Points"
+    },
+    "suggestions": {
+      "scatter-plot": "Scatter plot"
     }
   }
 }
