feat (query editor v2): scaffolding v2 (#116642)
* feat: scaffold query editor v2

* chore: fix toggle

* chore: go formatter, type narrowing, translation

* chore: let suppressions do their thing

* chore: less granular hooks...

* chore: two contexts... simplify

* feat: integrate next-gen query editor with feature toggle

* refactor: simplify PanelDataPaneNext and integrate QueryEditorContextBridge for improved state management

* feat: integrate useQueryEditorState in QueryEditorSidebar for improved query management

* refactor: update sidebar state management to use SidebarSize directly, removing SidebarState interface

* chore: format JSON schema and update icon availability

* refactor: update PanelDataPaneNext and QueryEditorContext to use dsError for error handling and improve context management

* refactor: optimize QueryEditorSidebar by memoizing component to enhance performance

* feat: introduce QueryEditorContextWrapper to enhance context management in the dashboard panel editor

* move to QueryEditor folder

* chore: fix imports

* i18n

* chore: idk why this i18n thing changed, reverting it....

---------

Co-authored-by: Sean Griffin <sean@sgriffin.dev>

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12590,6 +12590,13 @@
       "title-data-source-help": "Data source help"
     }
   },
+  "query-editor-next": {
+    "detail-placeholder": "Query/Transform detail view goes here",
+    "sidebar": {
+      "placeholder": "Sidebar content placeholder",
+      "toggle-size": "Toggle sidebar size"
+    }
+  },
   "query-library": {
     "exposed-compoment": {
       "tooltip": "Open Query Library"
