Dashboards: Add Grafana branding footer when in kiosk mode (#115202)
* feat(dashboard-scene): show Powered by footer in kiosk mode

Reuse the public dashboard footer branding in scene dashboards when kiosk mode is enabled, with an opt-out via hideLogo.

* addressing co-pilot feedback

* rename publicdashboardsfooter to brandingfooter naming

* Enhance DashboardBrandingFooter with new props for customization and add Kiosk variant support in DashboardScenePage.

* Refactor DashboardScenePage to utilize centralized footer visibility logic and enhance Kiosk variant handling in the footer. Update tests to ensure correct footer display based on configuration settings.

* revert code clean up change

* Enhance DashboardScenePage by improving routeReloadCounter logic and adding centralized dashboardRoute handling. Update footer component to conditionally hide based on visibility settings.

* restore eslint suppressions

* revert code cleanup changes

* fix CI issues

* clean up / remove some verbose tests

* add tests for dashboardbrandingfooter component

* addressed PR feedback

* simplify condition naming, fix flaky existing test

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -5171,6 +5171,9 @@
         "deleted": "deleted"
       }
     },
+    "kiosk": {
+      "footerPoweredBy": "Powered by"
+    },
     "layout": {
       "cancel": "Cancel",
       "common": {
