DynamicDashboards: Move variable editor from modal to drawer

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -4903,7 +4903,6 @@
           "apply": "Apply",
           "change-value": "Change variable value",
           "discard": "Discard",
-          "modal-title": "Custom options",
           "values": "Values separated by comma"
         },
         "datasource-options": {
@@ -4920,11 +4919,6 @@
         "name": "Name",
         "open-editor": "Open variable editor",
         "open-editor-tooltip": "For more variable options open variable editor",
-        "query-options": {
-          "close": "Close",
-          "modal-title": "Query Variable",
-          "preview": "Preview"
-        },
         "selection-options": {
           "allow-custom-values": "Allow custom values",
           "allow-custom-values-description": "Enables users to enter values",
@@ -6104,6 +6098,9 @@
         }
       }
     },
+    "editor-multi-props": {
+      "options": "Options"
+    },
     "email-list": {
       "aria-label-emailmenu": "Toggle email menu"
     },
@@ -6271,6 +6268,9 @@
       "repository": "Managed by: Repository {{title}}",
       "terraform": "Managed by: Terraform"
     },
+    "modal-editor": {
+      "title-variable-editor": "Variable editor"
+    },
     "move-provisioned-dashboard-form": {
       "api-error": "Failed to move dashboard",
       "cancel-action": "Cancel",
@@ -6309,6 +6309,14 @@
       "aria-label-remove-option": "Remove option",
       "title-drag-and-drop-to-reorder": "Drag and drop to reorder",
       "tooltip-remove-option": "Remove option"
+    },
+    "pane-item": {
+      "tabs": {
+        "label-preview": "Preview",
+        "label-query": "Query",
+        "label-static-options": "Static options"
+      },
+      "title-custom-variable-editor": "Custom variable editor"
     },
     "panel-data-alerting-tab": {
       "tab-label": "Alert"
@@ -6403,8 +6411,7 @@
           "value": "Variable value"
         }
       },
-      "selection-options": "Selection options",
-      "static-options-legend": "Static options"
+      "selection-options": "Selection options"
     },
     "resource-export": {
       "label": {
@@ -6605,6 +6612,11 @@
     },
     "use-save-dashboard": {
       "message-dashboard-saved": "Dashboard saved"
+    },
+    "use-variable-refreshs-category": {
+      "title": {
+        "refresh-options": "Refresh options"
+      }
     },
     "variable-check-indicator": {
       "aria-label-variable-referenced-dashboard": "This variable is not referenced by any variable or dashboard.",
